Overflow bug

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -2,7 +2,6 @@
 
 .menu {
   font-size: $headerElementFontSize;
-  width: 100%;
   flex: 2;
   margin-left: 2.5em;
   @media (min-width: $mainBreakPoint) {
